--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@ html, body {
 #map{
   height: 100%;
   width: 100%;
+  touch-action: pinch-zoom; 
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden;          /* يمنع سحب الصفحة */
+  overscroll-behavior: none; /* يمنع bounce */
+  touch-action: none;        /* يمنع gestures على الصفحة */
 }
 
 
@@ -45,6 +54,7 @@ html, body {
 
 .topbar.floating *{
   pointer-events: auto;
+  touch-action: manipulation;
 }
 
 .topbar.floating .coords{
@@ -67,7 +77,7 @@ html, body {
 .topbar.floating input{
   height: 36px;
   padding: 6px 10px;
-  font-size: 13px;
+  font-size: 16px;
   border-radius: 10px;
   border: 1px solid rgba(0,0,0,0.15);
   outline: none;
